# tuda-suda-app

./: .gitignore  BUILD_REPORT.md  LICENSE  README.md  config.yaml  idea.md  pyproject.toml  tuda-suda.spec  vision.md
.cursor/rules/: conventions.mdc  workflow.mdc
distribution/: .dockerignore  Dockerfile  README.md  build_in_docker.sh  build_native.sh
doc/: tasklist.md
src/: config.py  main.py
src/controllers/: config_controller.py  logs_controller.py  roles_controller.py  stands_controller.py  token_controller.py  vpn_controller.py
src/qml/: Main.qml  Theme.qml
src/qml/views/: LogsView.qml  RolesView.qml  StandsView.qml  TokenView.qml
src/services/: app_logger.py  role_service.py  stand_checker.py  token_service.py  vpn_checker.py
tests/: conftest.py  test_config.py
tests/integration/: test_controllers.py
tests/unit/: test_app_logger.py  test_role_service.py  test_stand_checker.py  test_token_service.py  test_vpn_checker.py
