[tool.poetry]
name = "tuda-suda-app"
version = "0.1.0"
description = "Десктоп-приложение для управления и мониторинга тестовых сред"
authors = ["eriknas"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
pyside6 = "^6.10"
requests = "^2.31"
psycopg = {extras = ["binary"], version = "^3.1"}
pyyaml = "^6.0"
pydantic = "^2.5"

[tool.poetry.group.dev.dependencies]
black = "^24.0"
pyinstaller = "^6.0"
pytest = "^8.0"
pytest-mock = "^3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
